--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,265 @@
-.App {
-  text-align: center;
+* {
+	padding: 0px;
+	margin: 0px;
+	box-sizing: border-box;
+}
+.main-cont {
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+}
+.sidebar-cont {
+	width: 10%;
+	height: 100%;
+}
+.logo-cont {
+	width: 100%;
+	height: 8%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.logo-cont img {
+	width: 80%;
+}
+.icons-cont {
+	width: 100%;
+	height: 5%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+.icons-cont img {
+	width: 16px;
+	height: 16px;
+}
+.sidebar {
+	height: calc(100% - 8%);
+	background-color: rgb(4, 4, 26);
+	padding: 10px 0px;
+}
+.opt {
+	padding: 10px 0px;
+	padding-left: 12px;
+}
+.side-heading {
+	color: rgb(255, 139, 96);
+	margin-bottom: 10px;
+}
+.opt-wrapper {
+	color: white;
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+}
+.main-section {
+	width: calc(100% - 10%);
+	background-color: rgb(255, 235, 255);
+}
+.header {
+	padding: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.header h1 {
+	color: rgb(4, 4, 26);
+	font-size: 30px;
+}
+.right-menu {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	justify-content: flex-end;
+}
+.right-menu img {
+	width: 25px;
+}
+.input-cont {
+	border: 2px solid gray;
+	display: flex;
+	gap: 10px;
+	padding: 2px 10px;
+	border-radius: 3px;
+}
+.input-cont img {
+	width: 20px;
+}
+.input-cont input {
+	width: 100px;
+	border: none;
+	outline: none;
+	background-color: transparent;
+}
+.number {
+	padding: 4px 6px;
+	border: 1px solid rgb(255, 135, 91);
+	border-radius: 4px;
+	background-color: white;
+}
+.import,
+.lead {
+	padding: 4px 6px;
+	border: 1px solid rgb(255, 135, 91);
+	border-radius: 4px;
+	color: white;
+	background-color: rgb(255, 135, 91);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.img-cont {
+	width: 28px;
+	height: 28px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgb(4, 4, 26);
+	border-radius: 3px;
+}
+.img-cont img {
+	width: 60%;
+}
+.dropdown-cont {
+	padding: 20px;
+	display: flex;
+	gap: 10px;
+	flex-direction: column;
+}
+.row {
+	display: flex;
+	gap: 30px;
+}
+.row label {
+	color: black;
+}
+.row {
+	display: flex;
+	gap: 15px;
+}
+.filter-product {
+	border: 1px solid black;
+	padding: 2px 4px;
+	border-radius: 6px;
+	background-color: white;
+}
+.table-data {
+	padding: 20px;
+}
+.appointments {
+	border: 1px solid #ffac62;
+	border-radius: 5px;
+	padding: 2px 4px;
+	background-color: white;
+}
+.appointments img {
+	width: 20px;
+}
+.table-star {
+	width: 20px;
+}
+.whatsapp-wrapper {
+	display: flex;
+	gap: 15px;
+}
+.whatsapp-wrapper img {
+	width: 20px;
+}
+.table {
+	width: 100%;
+	background-color: white;
+	padding: 20px;
+	border-radius: 10px;
+	box-shadow: 0px 0px 3px 0px black;
+}
+.table th {
+	text-align: start;
+}
+.checkbox-cont {
+	display: flex;
+	gap: 20px;
+}
+.whatsapp-edit {
+	display: flex;
+	justify-content: space-between;
+	gap: 60px;
+}
+.whatsapp-cont {
+	width: 25px;
+	height: 25px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 2px;
+	background-color: rgba(103, 172, 103, 0.534);
+}
+.edit-cont {
+	width: 25px;
+	height: 25px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 2px;
+	background-color: rgba(172, 125, 103, 0.534);
+}
+.whatsapp-cont img,
+.edit-cont img {
+	width: 70%;
+}
+.table tr:nth-child(even) {
+	background-color: rgba(173, 162, 173, 0.479);
+}
+.pagination {
+	padding: 0px 20px;
+	display: flex;
+	position: absolute;
+	bottom: 0px;
+}
+.pagination div {
+	border: 1px solid black;
+	padding: 2px 4px;
+}
+.data-cont {
+	background-color: white;
+	padding: 10px;
+	border-radius: 15px;
+	margin: 0px 20px;
+	display: flex;
+	gap: 10px;
+	flex-direction: column;
+}
+.data-headings {
+	display: flex;
+}
+.customer-heading {
+	display: flex;
+	gap: 20px;
+	width: 25%;
+}
+.dataWrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+}
+.source-heading {
+	width: 12%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.since-heading {
+	width: 12%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.poc-heading {
+	width: 12%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.last-heading {
+	width: 12%;
 }
-
-.App-link {
-  color: #61dafb;
+.next-heading {
+	display: flex;
+	justify-content: space-between;
+	width: 25%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.customerRow {
+	display: flex;
 }
